# PRE-Notebooks

./: .gitignore  CITATION.cff  README.md  _config.yml  _toc.yml  pyproject.toml  requirements.txt
docs/: get_started.md  index.md  run_notebooks.md
notebooks/: 02_kinetic_monte_carlo.ipynb  03_living_polymerization_distribution.ipynb  03_radical_pbe_batch_polymerization.ipynb  04_living_polymerization_rtd.ipynb  04_radical_kmc_batch_polymerization.ipynb  05_radical_atrp_batch_polymerization.ipynb  05_radical_pbe_batch_polymerization.ipynb  06_radical_kmc_batch_polymerization.ipynb  06_radical_semibatch_polymerization.ipynb  07_radical_atrp_batch_polymerization.ipynb  07_radical_semibatch_copolymerization.ipynb  08_living_polymerization_distribution.ipynb  08_radical_semibatch_polymerization.ipynb  09_living_polymerization_rtd.ipynb  09_radical_semibatch_copolymerization.ipynb  10_pulsed_laser_polymerization.ipynb  10_stepgrowth_epoxy_curing.ipynb  11_polycondensation_epoxy_curing.ipynb  11_pulsed_laser_polymerization.ipynb  11_stepgrowth_monte_carlo.ipynb  12_pulsed_laser_polymerization.ipynb  13_cstr_multiplicity.ipynb  13_pulsed_laser_polymerization.ipynb  14_cstr_multiplicity.ipynb  1_pbes.ipynb  1_population_balances.ipynb  2_kinetic_monte_carlo.ipynb  2_monte_carlo_polycondensation.ipynb  3_living_polymerization_distribution.ipynb  4_living_polymerization_cstr.ipynb  4_living_polymerization_rtd.ipynb  5_radical_pbe_batch_polymerization.ipynb  5_radical_polymerization.ipynb  6_pulsed_laser_polymerization.ipynb  6_radical_kmc_batch_polymerization.ipynb  (+25 more)
(+28 files in other folders)
